--- a/example/react-spa/package.json
+++ b/example/react-spa/package.json
@@ -3,10 +3,13 @@
   "private": true,
   "type": "module",
   "scripts": {
-    "dev": "vite --port=3001",
+    "dev": "vite --port=3000",
     "build": "vite build && tsc --noEmit",
     "serve": "vite preview",
-    "start": "vite"
+    "start": "vite",
+    "format": "prettier --check . --ignore-path ../../.gitignore",
+    "clean": "git clean -xdf .cache dist .coverage .turbo node_modules",
+    "lint": "node --max-old-space-size=8192 ../../node_modules/eslint/bin/eslint.js"
   },
   "dependencies": {
     "@typed-router/express-server": "workspace:*",
@@ -26,12 +29,21 @@
     "@types/react-dom": "^18.2.18",
     "@vitejs/plugin-react": "^4.3.4",
     "vite": "^6.0.3",
-    "@types/compression": "^1.7.5",
     "@ianvs/prettier-plugin-sort-imports": "catalog:",
     "@typed-router/eslint-config": "workspace:*",
     "@typed-router/prettier-config": "workspace:*",
     "@typed-router/tsconfig": "workspace:*",
     "prettier": "catalog:",
-    "typescript": "catalog:"
-  }
+    "@typed-router/router": "workspace:*",
+    "@typed-router/shared-lib": "workspace:*",
+    "@typed-router/tsup-config": "workspace:*",
+    "@types/express": "^5.0.0",
+    "@types/express-serve-static-core": "^5.0.1",
+    "mongodb-memory-server": "^9.1.8",
+    "tsx": "^4.7.2",
+    "typescript": "catalog:",
+    "vitest": "^2.0.5",
+    "tsup": "catalog:"
+  },
+  "prettier": "@typed-router/prettier-config"
 }
