--- a/example/express-server/tsconfig.json
+++ b/example/express-server/tsconfig.json
@@ -1,4 +1,5 @@
 {
+
   "compilerOptions": {
     "outDir": "dist",
     "lib": ["ESNext"],
@@ -11,10 +12,9 @@
     "jsx": "react",
     "module": "Preserve",
     // Add these performance-focused options
-    "incremental": true,
+    // "incremental": true,
     "skipLibCheck": true,
     "isolatedModules": true,
-    "composite": true,
 
     // Disable expensive checks
     "noUnusedLocals": false,
@@ -22,35 +22,18 @@
 
     // Use faster module resolution
     "moduleResolution": "bundler",
-
-    // Reduce type checking strictness for performance
+    "strictNullChecks": true,
     "strict": true,
-    "noImplicitAny": false,
-    "strictNullChecks": false,
+    "noImplicitAny": true,
 
     // Remove if not needed for your project
-    "sourceMap": false
+    "sourceMap": true,
   },
 
-  "include": ["server.ts", "src/**/*.ts", "src/**/*.tsx", "global.d.ts"],
-  "exclude": [
-    "@typed-router/auth",
-    "node_modules",
-    "**/node_modules/*",
-    "dist",
-    "**/dist/*",
-    "**/build/*",
-    "**/coverage/*",
-    "**/temp/*",
-    "**/tmp/*",
-    "**/.cache/*",
-    "**/.next/*",
-    "**/.nuxt/*",
-    "**/.vuepress/dist/*",
-    "**/.docusaurus/*",
-    "**/public/*",
-    "**/out/*",
-    "**/output/*",
-    "**/vendor/*"
-  ]
+  "include": [
+    "src/**/*.ts",
+    "src/**/*.tsx",
+    "src/**/*.js",
+    "src/**/*.jsx"
+  ],
 }
