--- a/example/express-server/package.json
+++ b/example/express-server/package.json
@@ -2,40 +2,45 @@
   "name": "@typed-router/express-server",
   "version": "1.0.0",
   "private": true,
-  "main": "./src/index.ts",
   "exports": {
-    "./post": {
-      "development":  "./src/controllers/post.ts",
-      "default": {
-        "types": "./dist/controllers/post.d.ts"
-      }
+    ".": {
+      "types": "./dist/_tsup-dts-rollup.d.ts"
     }
   },
   "scripts": {
-    "start": "pnpm build && node dist/index.js",
-    "dev": "tsx watch ./src/index.ts",
+    "start": "pnpm generate && pnpm build && node dist/index.js",
+    "dev": "pnpm generate && tsx watch ./src/index.ts",
     "dev-debug": "tsx watch --inspect ./server.ts",
     "build": "tsup-node --tsconfig ./tsconfig.json",
     "format": "prettier --check . --ignore-path ../../.gitignore",
     "clean": "git clean -xdf .cache dist .coverage .turbo node_modules",
     "lint": "node --max-old-space-size=8192 ../../node_modules/eslint/bin/eslint.js",
-    "typecheck": "tsc --noEmit"
+    "typecheck": "tsc --noEmit",
+    "generate": "drizzle-kit generate"
   },
   "dependencies": {
+    "@electric-sql/pglite": "^0.2.16",
+    "@microsoft/api-extractor": "^7.49.1",
     "@typed-router/router": "workspace:*",
     "@typed-router/shared-lib": "workspace:*",
     "@typed-router/tsconfig": "workspace:*",
     "@typed-router/tsup-config": "workspace:*",
+    "@zodyac/zod-mongoose": "^3.2.0",
     "axios": "^1.7.9",
     "compression": "^1.7.4",
     "cors": "^2.8.5",
+    "drizzle-kit": "^0.30.2",
+    "drizzle-orm": "^0.38.4",
+    "drizzle-zod": "^0.6.1",
     "express": "^5.0.1",
     "mongodb-memory-server": "^9.1.8",
     "mongoose": "catalog:",
     "pino": "^9.4.0",
     "pino-http": "^10.3.0",
     "pino-pretty": "^11.2.1",
-    "tsup": "catalog:"
+    "postgres": "^3.4.5",
+    "tsup": "catalog:",
+    "zod": "^3.24.1"
   },
   "devDependencies": {
     "@ianvs/prettier-plugin-sort-imports": "catalog:",
