--- a/tooling/prettier/package.json
+++ b/tooling/prettier/package.json
@@ -5,21 +5,26 @@
   "exports": {
     ".": {
       "types": "./dist/index.d.ts",
-      "import": "./dist/index.js"
+      "require": "./dist/index.js",
+      "node": "./dist/index.js",
+      "import": "./dist/index.mjs",
+      "default": "./index.ts"
     }
   },
   "scripts": {
-    "build": "tsc",
+    "build": "tsup",
     "clean": "git clean -xdf .cache .turbo node_modules",
     "format": "prettier --check . --ignore-path ../../.gitignore",
     "typecheck": "tsc --noEmit"
   },
   "dependencies": {
-    "prettier": "catalog:"
+    "prettier": "catalog:",
+    "tsup":  "catalog:"
   },
   "devDependencies": {
     "@ianvs/prettier-plugin-sort-imports": "catalog:",
     "@typed-router/tsconfig": "workspace:*",
+    "@typed-router/tsup-config": "workspace:*",
     "@types/node": "catalog:",
     "typescript": "catalog:"
   },
