--- a/example/react-spa/package.json
+++ b/example/react-spa/package.json
@@ -13,34 +13,36 @@
     "typecheck": "tsc --noEmit"
   },
   "dependencies": {
-    "@typed-router/express-server": "workspace:*",
-    "@typed-router/client": "workspace:*",
+    "@hookform/resolvers": "^3.10.0",
     "@tanstack/react-query": "^5.62.3",
     "@tanstack/react-query-devtools": "^5.62.3",
     "@tanstack/react-router": "^1.97.17",
     "@tanstack/router-devtools": "^1.97.17",
     "@tanstack/router-plugin": "^1.97.17",
+    "@typed-router/client": "workspace:*",
+    "@typed-router/express-server": "workspace:*",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-hook-form": "^7.54.2",
     "redaxios": "^0.5.1",
     "zod": "^3.24.1"
   },
   "devDependencies": {
-    "@types/react": "^18.2.47",
-    "@types/react-dom": "^18.2.18",
-    "@vitejs/plugin-react": "^4.3.4",
-    "vite": "^6.0.3",
     "@ianvs/prettier-plugin-sort-imports": "catalog:",
     "@typed-router/eslint-config": "workspace:*",
     "@typed-router/prettier-config": "workspace:*",
-    "@typed-router/tsconfig": "workspace:*",
-    "prettier": "catalog:",
     "@typed-router/shared-lib": "workspace:*",
+    "@typed-router/tsconfig": "workspace:*",
     "@typed-router/tsup-config": "workspace:*",
+    "@types/react": "^18.2.47",
+    "@types/react-dom": "^18.2.18",
+    "@vitejs/plugin-react": "^4.3.4",
+    "prettier": "catalog:",
+    "tsup": "catalog:",
     "tsx": "^4.7.2",
     "typescript": "catalog:",
-    "vitest": "^2.0.5",
-    "tsup": "catalog:"
+    "vite": "^6.0.3",
+    "vitest": "^2.0.5"
   },
   "prettier": "@typed-router/prettier-config"
 }
