--- a/example/shared-lib/package.json
+++ b/example/shared-lib/package.json
@@ -3,8 +3,10 @@
   "private": true,
   "version": "0.1.0",
   "exports": {
-    "./model-types": {
-      "default": "./src/types/model-types/mongoose.gen.ts"
+    "./schema": {
+      "types": "./dist/src/schema/index.d.ts",
+      "import": "./dist/src/schema/index.js",
+      "default": "./src/schema/index.ts"
     }
   },
   "scripts": {
@@ -13,11 +15,12 @@
     "dev": "tsc --watch",
     "format": "prettier --check . --ignore-path ../../.gitignore",
     "lint": "eslint",
-    "typecheck": "tsc --noEmit --emitDeclarationOnly false",
-    "generateTypes": "pnpm mtgen --config ./mtgen.config.json"
+    "typecheck": "tsc --noEmit --emitDeclarationOnly false"
   },
   "dependencies": {
-    "mongoose": "latest"
+    "drizzle-orm": "^0.38.4",
+    "drizzle-zod": "^0.6.1",
+    "zod": "^3.24.1"
   },
   "devDependencies": {
     "@ianvs/prettier-plugin-sort-imports": "catalog:",
@@ -26,7 +29,6 @@
     "@typed-router/tsconfig": "workspace:*",
     "@types/node": "catalog:",
     "eslint": "catalog:",
-    "mongoose-tsgen": "^9.5.1",
     "prettier": "catalog:",
     "typescript": "catalog:"
   },
