--- a/tooling/eslint/package.json
+++ b/tooling/eslint/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@typed-router/eslint-config",
+  "name": "@express-ts/eslint-config",
   "private": true,
   "version": "0.3.0",
   "types": "./dist/base.d.ts",
@@ -49,8 +49,8 @@
   },
   "devDependencies": {
     "@ianvs/prettier-plugin-sort-imports": "catalog:",
-    "@typed-router/prettier-config": "workspace:*",
-    "@typed-router/tsconfig": "workspace:*",
+    "@express-ts/prettier-config": "workspace:*",
+    "@express-ts/tsconfig": "workspace:*",
     "@types/eslint-plugin-security": "^3.0.0",
     "@types/eslint__js": "8.42.3",
     "@types/node": "catalog:",
@@ -58,5 +58,5 @@
     "prettier": "catalog:",
     "typescript": "catalog:"
   },
-  "prettier": "@typed-router/prettier-config"
+  "prettier": "@express-ts/prettier-config"
 }
