--- a/.changeset/config.json
+++ b/.changeset/config.json
@@ -7,5 +7,5 @@
   "access": "restricted",
   "baseBranch": "main",
   "updateInternalDependencies": "patch",
-  "ignore": ["@express-ts/e2e-tests"]
+  "ignore": ["@express-ts-rpc/e2e-tests"]
 }
