--- a/example/express-server/package.json
+++ b/example/express-server/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@express-ts/express-server",
+  "name": "@express-ts-rpc/express-server",
   "version": "1.0.0",
   "private": true,
   "exports": {
@@ -21,10 +21,10 @@
   "dependencies": {
     "@electric-sql/pglite": "^0.2.16",
     "@microsoft/api-extractor": "^7.49.1",
-    "@express-ts/router": "workspace:*",
-    "@express-ts/shared-lib": "workspace:*",
-    "@express-ts/tsconfig": "workspace:*",
-    "@express-ts/tsup-config": "workspace:*",
+    "@express-ts-rpc/router": "workspace:*",
+    "@express-ts-rpc/shared-lib": "workspace:*",
+    "@express-ts-rpc/tsconfig": "workspace:*",
+    "@express-ts-rpc/tsup-config": "workspace:*",
     "@zodyac/zod-mongoose": "^3.2.0",
     "axios": "^1.7.9",
     "compression": "^1.7.4",
@@ -44,8 +44,8 @@
   },
   "devDependencies": {
     "@ianvs/prettier-plugin-sort-imports": "catalog:",
-    "@express-ts/eslint-config": "workspace:*",
-    "@express-ts/prettier-config": "workspace:*",
+    "@express-ts-rpc/eslint-config": "workspace:*",
+    "@express-ts-rpc/prettier-config": "workspace:*",
     "@types/compression": "^1.7.5",
     "@types/cors": "^2.8.17",
     "@types/express": "^5.0.0",
@@ -55,5 +55,5 @@
     "typescript": "catalog:",
     "vitest": "^2.0.5"
   },
-  "prettier": "@express-ts/prettier-config"
+  "prettier": "@express-ts-rpc/prettier-config"
 }
