--- a/example/react-spa/package.json
+++ b/example/react-spa/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@express-ts/react-spa",
+  "name": "@express-ts-rpc/react-spa",
   "private": true,
   "type": "module",
   "scripts": {
@@ -19,8 +19,8 @@
     "@tanstack/react-router": "^1.97.17",
     "@tanstack/router-devtools": "^1.97.17",
     "@tanstack/router-plugin": "^1.97.17",
-    "@express-ts/client": "workspace:*",
-    "@express-ts/express-server": "workspace:*",
+    "@express-ts-rpc/client": "workspace:*",
+    "@express-ts-rpc/express-server": "workspace:*",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.54.2",
@@ -29,11 +29,11 @@
   },
   "devDependencies": {
     "@ianvs/prettier-plugin-sort-imports": "catalog:",
-    "@express-ts/eslint-config": "workspace:*",
-    "@express-ts/prettier-config": "workspace:*",
-    "@express-ts/shared-lib": "workspace:*",
-    "@express-ts/tsconfig": "workspace:*",
-    "@express-ts/tsup-config": "workspace:*",
+    "@express-ts-rpc/eslint-config": "workspace:*",
+    "@express-ts-rpc/prettier-config": "workspace:*",
+    "@express-ts-rpc/shared-lib": "workspace:*",
+    "@express-ts-rpc/tsconfig": "workspace:*",
+    "@express-ts-rpc/tsup-config": "workspace:*",
     "@types/react": "^18.2.47",
     "@types/react-dom": "^18.2.18",
     "@vitejs/plugin-react": "^4.3.4",
@@ -44,5 +44,5 @@
     "vite": "^6.0.3",
     "vitest": "^2.0.5"
   },
-  "prettier": "@express-ts/prettier-config"
+  "prettier": "@express-ts-rpc/prettier-config"
 }
