--- a/example/shared-lib/package.json
+++ b/example/shared-lib/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@express-ts/shared-lib",
+  "name": "@express-ts-rpc/shared-lib",
   "private": true,
   "version": "0.1.0",
   "exports": {
@@ -24,13 +24,13 @@
   },
   "devDependencies": {
     "@ianvs/prettier-plugin-sort-imports": "catalog:",
-    "@express-ts/eslint-config": "workspace:*",
-    "@express-ts/prettier-config": "workspace:*",
-    "@express-ts/tsconfig": "workspace:*",
+    "@express-ts-rpc/eslint-config": "workspace:*",
+    "@express-ts-rpc/prettier-config": "workspace:*",
+    "@express-ts-rpc/tsconfig": "workspace:*",
     "@types/node": "catalog:",
     "eslint": "catalog:",
     "prettier": "catalog:",
     "typescript": "catalog:"
   },
-  "prettier": "@express-ts/prettier-config"
+  "prettier": "@express-ts-rpc/prettier-config"
 }
