--- a/tooling/prettier/package.json
+++ b/tooling/prettier/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@express-ts/prettier-config",
+  "name": "@express-ts-rpc/prettier-config",
   "private": true,
   "version": "0.1.0",
   "exports": {
@@ -23,10 +23,10 @@
   },
   "devDependencies": {
     "@ianvs/prettier-plugin-sort-imports": "catalog:",
-    "@express-ts/tsconfig": "workspace:*",
-    "@express-ts/tsup-config": "workspace:*",
+    "@express-ts-rpc/tsconfig": "workspace:*",
+    "@express-ts-rpc/tsup-config": "workspace:*",
     "@types/node": "catalog:",
     "typescript": "catalog:"
   },
-  "prettier": "@express-ts/prettier-config"
+  "prettier": "@express-ts-rpc/prettier-config"
 }
