--- a/tooling/tsup/package.json
+++ b/tooling/tsup/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@express-ts/tsup-config",
+  "name": "@express-ts-rpc/tsup-config",
   "description": "Shared tsup configuration to be used across packages. Use this for building internal libs",
   "private": true,
   "version": "0.1.0",
@@ -17,9 +17,9 @@
   },
   "devDependencies": {
     "@ianvs/prettier-plugin-sort-imports": "catalog:",
-    "@express-ts/tsconfig": "workspace:*",
+    "@express-ts-rpc/tsconfig": "workspace:*",
     "@types/node": "catalog:",
     "typescript": "catalog:"
   },
-  "prettier": "@express-ts/prettier-config"
+  "prettier": "@express-ts-rpc/prettier-config"
 }
