--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -23,6 +23,7 @@ jobs:
       - uses: pnpm/action-setup@v4
         name: Install pnpm
         with:
+          run_install: true
           version: 10.0.0
 
       - name: Create Release Pull Request or Publish to npm
