--- a/.gitignore
+++ b/.gitignore
@@ -89,3 +89,5 @@ example/react-spa/node_modules
 example/shared-lib/node_modules
 example/express-server/src/config/drizzle
 example/express-server/.tsup
+example/shared-lib/drizzle
+example/react-spa/src/routeTree.gen.ts
